src/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Apply_as_Net_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply as Net Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Impact_Percent__c</fullName>
        <label>Commission Impact (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Impact_W__c</fullName>
        <label>Commission Impact ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Impact__c</fullName>
        <label>Commission Impact ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conga Template</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Early_Adopter_Promo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Adopter Promo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_as_Cash_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible as Cash Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Promotions_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Promotions Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_Option__c</fullName>
        <label>Financing Option</label>
        <picklist>
            <picklistValues>
                <fullName>No Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enerbank - SAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enerbank - Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFC First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susquehanna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Smart E Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sungage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_by_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include by Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Fund</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leasing_Option__c</fullName>
        <label>Leasing Option</label>
        <picklist>
            <picklistValues>
                <fullName>Low-Upfront - Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay - Keep SRECs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_System_Size__c</fullName>
        <description>Only apply promotion to systems of at least this size (in kW)</description>
        <label>Minimum System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Amount_Percent__c</fullName>
        <label>Promo Amount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Promo_Amount_W__c</fullName>
        <label>Promo Amount ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Amount__c</fullName>
        <label>Promo Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeDeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Promotion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>System_Design_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Design Product</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>Active_Promotions</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Lease_Fund__c</columns>
        <columns>State__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Promo_Amount_W__c</columns>
        <columns>Promo_Amount__c</columns>
        <columns>Promo_Amount_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active Promotions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lease_Fund__c</columns>
        <columns>System_Design_Product__c</columns>
        <columns>State__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Promo_Amount__c</columns>
        <columns>Promo_Amount_Percent__c</columns>
        <columns>Promo_Amount_W__c</columns>
        <columns>Apply_as_Net_Adjustment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Promotions</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Promo_Amount_W__c</columns>
        <columns>Promo_Amount__c</columns>
        <columns>Promo_Amount_Percent__c</columns>
        <columns>State__c</columns>
        <columns>Financing_Option__c</columns>
        <columns>Financing_Type__c</columns>
        <columns>Lease_Fund__c</columns>
        <columns>Leasing_Option__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All Active Promotions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CashBackPromotions</fullName>
        <columns>NAME</columns>
        <columns>Lease_Fund__c</columns>
        <columns>System_Design_Product__c</columns>
        <columns>State__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Promo_Amount__c</columns>
        <columns>Promo_Amount_Percent__c</columns>
        <columns>Promo_Amount_W__c</columns>
        <columns>Apply_as_Net_Adjustment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apply_as_Net_Adjustment__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cash Back Promotions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <label>Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>